# astroapers

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  logo_generator.py  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: benchmark_apertures.py
docs/quarto/: _quarto-tutorials.yml  _quarto.yml  benchmarks.qmd  gallery.qmd  index.qmd  objects.json  performance.qmd  rust-api.qmd  styles.css
docs/quarto/_scripts/: render_runtime_docstrings.py
docs/quarto/api/: ApMask.qmd  BoundingBox.qmd  CircAn.qmd  CircAp.qmd  EllipAn.qmd  EllipAp.qmd  ParallelThresholdCalibration.qmd  PathAp.qmd  PillAn.qmd  PillAp.qmd  RectAn.qmd  RectAp.qmd  WedgeAp.qmd  _sidebar.yml  apmask_apsum.qmd  apmask_npix.qmd  apmask_to_image.qmd  apmask_weighted_cutout.qmd  apmask_weighted_values.qmd  apsum_circ_ann_center.qmd  apsum_circ_ann_exact.qmd  apsum_circ_center.qmd  apsum_circ_exact.qmd  apsum_ellip_ann_center.qmd  apsum_ellip_ann_exact.qmd  apsum_ellip_center.qmd  apsum_ellip_exact.qmd  apsum_path_center.qmd  apsum_path_exact.qmd  apsum_pill_ann_center.qmd  apsum_pill_ann_exact.qmd  apsum_pill_center.qmd  apsum_pill_exact.qmd  apsum_rect_ann_center.qmd  apsum_rect_ann_exact.qmd  apsum_rect_center.qmd  apsum_rect_exact.qmd  apsum_wedge_center.qmd  apsum_wedge_exact.qmd  bboxes_path.qmd  (+23 more)
docs/quarto/tutorials/: 01-quickstart.qmd  02-masks.qmd  03-background.qmd  04-multiple-apertures.qmd  05-custom-masks.qmd  06-ellipse-annuli-galaxies.qmd  06-mixed-annulus-shapes.qmd  07-wedge-comet-jet.qmd  08-pathap-custom-shapes.qmd  09-performance-guide.qmd
python/astroapers/: __init__.py  _aperture_kernel_ops.py  _apertures.py  _calibration.py  _cli.py  _containers.py  _kernel_dispatch.py  _kernel_docs.py  _kernel_validation.py  _path.py  _path_encoding.py  _pill.py  _utils.py  _wedge.py  kernels.py  plotting.py
src/: aperture.rs  geometry.rs  lib.rs  pyapi.rs
src/pyapi/: apsum.rs  bbox.rs  mask.rs  npix.rs  parallel_api.rs  path.rs  raster.rs  summation.rs  support.rs  weights.rs
tests/: rust_api.rs  test_annuli.py  test_aperture_image_matrix.py  test_cross_library_parity.py  test_farthest_mask_pixel.py  test_kernel_support_split.py  test_low_level_kernels.py  test_masks.py  test_object_api.py  test_path.py  test_plotting.py  test_wedge.py  test_wrapper.py
