[package]
name = "astroapers"
version = "0.1.2"
edition = "2021"
description = "Rust-backed aperture overlap and summation utilities"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ysbach/astroapers"
homepage = "https://ysbach.github.io/astroapers/"
documentation = "https://docs.rs/astroapers"
keywords = ["astronomy", "aperture", "photometry", "numpy", "pyo3"]
categories = ["science", "algorithms"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/src/**/*.rs",
    "/tests/**/*.rs",
]

[lib]
name = "astroapers"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
numpy = { version = "0.28", optional = true }
pyo3 = { version = "0.28", optional = true }
rayon = "1.10"

[profile.release]
codegen-units = 1
lto = "thin"
