[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "astroapers"
version = "0.1.1"
description = "Rust-backed aperture overlap and summation utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["numpy", "reducers>=0.2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/ysbach/astroapers"
Documentation = "https://ysbach.github.io/astroapers/"
Repository = "https://github.com/ysbach/astroapers"
Issues = "https://github.com/ysbach/astroapers/issues"

[project.optional-dependencies]
docs = [
    "jupyter",
    "matplotlib",
    "pandas",
    "photutils",
    "scipy",
    "sep",
    "quartodoc",
    "griffe<1",
]
dev = [
    "jupyter",
    "matplotlib",
    "pandas",
    "photutils",
    "scipy",
    "sep",
    "ruff",
    "pytest",
]

[project.scripts]
astroapers = "astroapers._cli:main"

[tool.uv.sources]
reducers = { path = "../reducers", editable = true }

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "astroapers._rust"
profile = "release"
features = ["extension-module"]
exclude = [
    "**/.DS_Store",
    "**/__pycache__/*",
    "**/*.pyc",
    "**/*.so",
    "build/**",
    "python/*.egg-info/**",
    "target/**",
]
